telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestAttrAssignClass2.java
package tests;

class A {

	public A(String s) {
	}
	
	A(){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

public strictfp abstract class C extends A {
	
	A m = new A("lala");
	
	public C() {
		// TODO Auto-generated constructor stub
	}

	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}
	
	public void m(int x){
		
	}

	void x(int y){
	}

	abstract void m2();
}
